force-app/main/default/objects/Opportunity/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <inlineHelpText>Use this field to indicate the current status of the loan.</inlineHelpText>
    <label>Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active - Partial Payment</fullName>
            </value>
            <value>
                <fullName>Closed - Paid</fullName>
            </value>
            <value>
                <fullName>Closed - Bad Debt</fullName>
            </value>
            <value>
                <fullName>Closed - Bad Debt - Making Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>