force-app/main/default/objects/Opportunity/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MVA</fullName>
                <label>1 - MVA</label>
            </value>
            <value>
                <fullName>Slip and Fall</fullName>
                <label>2 - Slip &amp; Fall</label>
            </value>
            <value>
                <fullName>STD/LTD</fullName>
                <label>3 - STD/LTD</label>
            </value>
            <value>
                <fullName>Product Liability</fullName>
                <label>4 - Product Liability</label>
            </value>
            <value>
                <fullName>Medical Malpractice</fullName>
                <label>5 - Medical Malpractice</label>
            </value>
            <value>
                <fullName>Employment</fullName>
                <label>6 - Employment</label>
            </value>
            <value>
                <fullName>Sexual Assault</fullName>
                <label>7 - Sexual Assault</label>
            </value>
            <value>
                <fullName>8 - Settled Cases</fullName>
            </value>
            <value>
                <fullName>9 - Other</fullName>
            </value>
            <value>
                <fullName>10 - Class Action</fullName>
            </value>
            <value>
                <fullName>11 - U.S. Cases</fullName>
            </value>
            <value>
                <fullName>12 - Uncategorized</fullName>
            </value>
            <value>
                <fullName>13 - Assessment Loan</fullName>
            </value>
            <value>
                <fullName>14 - Lawyer Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>