force-app/main/default/objects/Opportunity/fields/LumpSum_Drawdown_Description__c.field-meta.xml
<CustomField>
    <fullName>LumpSum_Drawdown_Description__c</fullName>
    <description>Field used in the Lump sum drawdown automated process</description>
    <formula>&quot;ELF File: &quot; &amp; Primary_Contact__r.ELF_File_No__c &amp; &quot; - Customer: &quot; &amp; Primary_Contact__r.FirstName &amp; &quot;, &quot; &amp; Primary_Contact__r.LastName &amp; &quot; - Court File No.: &quot; &amp; Court_File_No__c</formula>
    <label>LumpSum Drawdown Description</label>
    <type>Text</type>
</CustomField>