force-app/main/default/objects/Opportunity/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>This is the Message that was entered on the Web To Lead form.</description>
    <label>Message from W2L</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>