force-app/main/default/objects/Opportunity/fields/Minimum_Interest_Period__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Interest_Period__c</fullName>
    <label>Minimum Interest Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 months</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
            <value>
                <fullName>5 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
                <default>true</default>
                <label>6 months</label>
            </value>
            <value>
                <fullName>7 months</fullName>
            </value>
            <value>
                <fullName>8 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>10 months</fullName>
            </value>
            <value>
                <fullName>11 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>