force-app/main/default/objects/Opportunity/fields/My_Lawyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>My_Lawyer_Contact__c</fullName>
    <description>This checkbox defines if the running user is associated to the lawyer of the opportunity based on its line of business and the customer line of business</description>
    <formula>IF(
AND(
RecordType.DeveloperName = &quot;Client_Opportunity_Record_Type&quot;,
TEXT(Account.Business_Unit__c) = TEXT($User.Business_Unit__c),
OR(
Lawyer__r.OwnerId = $User.Id,
Lawyer__r.Secondary_Contact_Owner__c = $User.Id
)
)
, True
, False
)</formula>
    <inlineHelpText>This checkbox defines if the running user is associated to the lawyer of the opportunity based on its line of business and the customer line of business</inlineHelpText>
    <label>My Lawyer Contact</label>
    <type>Checkbox</type>
</CustomField>