force-app/main/default/objects/Opportunity/fields/Name_of_Court__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Court__c</fullName>
    <label>Name of Court</label>
    <length>80</length>
    <type>Text</type>
</CustomField>