force-app/main/default/objects/Opportunity/fields/Name_of_Court_File__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Court_File__c</fullName>
    <formula>Name_of_Court__c &amp;&quot; / &quot;&amp; Court_File_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Court &amp; File #</label>
    <type>Text</type>
</CustomField>