force-app/main/default/objects/Opportunity/fields/Nature_of_Injury_from_W2L__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Injury_from_W2L__c</fullName>
    <label>Nature of Injury from W2L</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>