force-app/main/default/objects/Opportunity/fields/Need_Replacement_Counsel_Documents__c.field-meta.xml
<CustomField>
    <fullName>Need_Replacement_Counsel_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Replacement Counsel Documents</label>
    <type>Checkbox</type>
</CustomField>