force-app/main/default/objects/Opportunity/fields/NOTE_For_Paralegals__c.field-meta.xml
<CustomField>
    <fullName>NOTE_For_Paralegals__c</fullName>
    <label>NOTE For Paralegals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>