force-app/main/default/objects/Opportunity/fields/Oldest_Unallocated_Payment__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Unallocated_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Stores the id of the oldest payment not fully allocated.  This will be used to kick off payment allocation when a new drawdown is inserted/updated.    This field will be maintained by DLRS and should not be updated manually.</inlineHelpText>
    <label>Oldest Unallocated Payment</label>
    <referenceTo>Drawdown__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>