force-app/main/default/objects/Opportunity/fields/Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Date__c</fullName>
    <label>Opportunity Closed Date</label>
    <summarizedField>Drawdown__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Reference_Notes__c</field>
        <operation>equals</operation>
        <value>Loan Payout, Payment Shortfall, Payment Surplus</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>