force-app/main/default/objects/Opportunity/fields/Opportunity_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Long_Name__c</fullName>
    <formula>Name &amp;&quot; - &quot;&amp; TEXT(Loan_Requests__c) &amp; &quot; - &quot;&amp; TEXT(Loan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Long Name</label>
    <type>Text</type>
</CustomField>