force-app/main/default/objects/Opportunity/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>for concatenating the standard name with some other fields</description>
    <formula>Hyperlink(&quot;/&quot;+Id,Name &amp;&quot; - &quot;&amp; TEXT(Loan_Requests__c) &amp; &quot; - &quot;&amp; TEXT(Loan_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>