force-app/main/default/objects/Opportunity/fields/Other_Fee_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Roll_Up__c</fullName>
    <label>Other Fee Roll-Up</label>
    <summarizedField>Drawdown__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>