force-app/main/default/objects/Opportunity/fields/Other_Lawyer_Law_Firm_that_acted__c.field-meta.xml
<CustomField>
    <fullName>Other_Lawyer_Law_Firm_that_acted__c</fullName>
    <label>Other Lawyer / Law Firm that acted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>