force-app/main/default/objects/Opportunity/fields/Outstanding_Balance_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_as_of_To_Date__c</fullName>
    <inlineHelpText>Outstanding Balance on the Reporting To date.  Used for ELFI 1 report.  Note that this field is just labeled &quot;Outstanding Balance&quot; on the report (label changed via report type).</inlineHelpText>
    <label>Outstanding Balance as of To Date</label>
    <summarizedField>Drawdown__c.Outstanding_Balance_as_of_To_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>