force-app/main/default/objects/Opportunity/fields/Outstanding_Days__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Days__c</fullName>
    <formula>(Payout_Date__c+1) - Date_of_advance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>