force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_File_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_File_Status__c</fullName>
    <description>Used in the WIP report to filter our closed re-assessments</description>
    <formula>TEXT(Re_Assessed_Loan__r.StageName)</formula>
    <label>Parent Opportunity File Status</label>
    <type>Text</type>
</CustomField>