force-app/main/default/objects/Opportunity/fields/Payment_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Total__c</fullName>
    <formula>(Drawdown_Total_wo_Payment__c + Interest_Accrued_as_of_Payout_Date__c) - Payment_Roll_up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>