force-app/main/default/objects/Opportunity/fields/Payment_Default_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Default_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank Account Scheduled Facility payments should to go if they are not going to the Primary Bank Account set on the Account</description>
    <label>Payment Default Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>