force-app/main/default/objects/Opportunity/fields/Payment_Schedule_Allotted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Allotted_Amount__c</fullName>
    <label>Payment Schedule Allotted Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>