force-app/main/default/objects/Opportunity/fields/Payment_Schedule_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Mode__c</fullName>
    <label>Payment Schedule Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>