force-app/main/default/objects/Opportunity/fields/Payment_Schedule_Send_First_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Send_First_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send First Payment Immediately</label>
    <type>Checkbox</type>
</CustomField>