force-app/main/default/objects/Opportunity/fields/Payment_Schedule_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Version_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Schedule Version Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>