force-app/main/default/objects/Opportunity/fields/Payment_Scheduled_Allotment_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Payment_Scheduled_Allotment_Remaining__c</fullName>
    <formula>MIN(
    Amount_Available_for_Scheduled_Payments__c,
				Payment_Schedule_Allotted_Amount__c - Amount_sent_from_current_Schedule__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Scheduled Allotment Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>