force-app/main/default/objects/Opportunity/fields/Payment_Use_Primary_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Use_Primary_Bank_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Do Scheduled Facility Payments use the Primary Bank Account?</description>
    <label>Payment Use Primary Bank Account</label>
    <type>Checkbox</type>
</CustomField>