force-app/main/default/objects/Opportunity/fields/Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date__c</fullName>
    <label>Payout Date</label>
    <type>Date</type>
</CustomField>