force-app/main/default/objects/Opportunity/fields/Payout_Interest__c.field-meta.xml
<CustomField>
    <fullName>Payout_Interest__c</fullName>
    <inlineHelpText>Interest to Payout Date</inlineHelpText>
    <label>Payout Interest</label>
    <summarizedField>Drawdown__c.Accrued_Interest_as_of_Payout_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>