force-app/main/default/objects/Opportunity/fields/Payout_Statements_on_File__c.field-meta.xml
<CustomField>
    <fullName>Payout_Statements_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payout Statements on File</label>
    <type>Checkbox</type>
</CustomField>