force-app/main/default/objects/Opportunity/fields/Percent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Percent_Amount__c</fullName>
    <label>% Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>