force-app/main/default/objects/Opportunity/fields/Pre_Existing_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Loan_Amount__c</fullName>
    <label>Pre-Existing Loan Amount $</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>