force-app/main/default/objects/Opportunity/fields/Pre_Existing_Settlement_Loans_on_File__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Settlement_Loans_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Existing Settlement Loans on File</label>
    <type>Checkbox</type>
</CustomField>