force-app/main/default/objects/Opportunity/fields/Primary_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_City__c</fullName>
    <formula>Primary_Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact City</label>
    <type>Text</type>
</CustomField>