force-app/main/default/objects/Opportunity/fields/Primary_Contact_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Postal_Code__c</fullName>
    <formula>Primary_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Postal Code</label>
    <type>Text</type>
</CustomField>