force-app/main/default/objects/Opportunity/fields/Primary_Contact_Province__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Province__c</fullName>
    <formula>Primary_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Province</label>
    <type>Text</type>
</CustomField>