force-app/main/default/objects/Opportunity/fields/Primary_Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Street__c</fullName>
    <formula>Primary_Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Street</label>
    <type>Text</type>
</CustomField>