force-app/main/default/objects/Opportunity/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>