force-app/main/default/objects/Opportunity/fields/Principal_Borrowed_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Principal_Borrowed_as_of_To_Date__c</fullName>
    <inlineHelpText>Amount borrowed as it was on the Reporting To Date. Excludes anything which was already paid off before the reporting period as well borrowed afterwards and things which do not accrue interest(Payments, Referral Fees, Payments Re-Proc/Rejected)</inlineHelpText>
    <label>Principal Borrowed as of To Date</label>
    <summarizedField>Drawdown__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Include_Principal_In_Portfolio_Reports__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Drawdown__c.Date_Fits_To_Portfolio_Report__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Drawdown__c.Reference_Notes__c</field>
        <operation>notEqual</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>