force-app/main/default/objects/Opportunity/fields/Principal_Received__c.field-meta.xml
<CustomField>
    <fullName>Principal_Received__c</fullName>
    <label>Principal Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>