force-app/main/default/objects/Opportunity/fields/Principal_Repaid_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Principal_Repaid_Roll_up__c</fullName>
    <label>Principal Repaid Roll up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>