force-app/main/default/objects/Opportunity/fields/Principal_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Principal_Reversed__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Principal Reversed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>