force-app/main/default/objects/Opportunity/fields/Principal_Reversed_wo_Providers__c.field-meta.xml
<CustomField>
    <fullName>Principal_Reversed_wo_Providers__c</fullName>
    <label>Principal Reversed wo Providers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>