force-app/main/default/objects/Opportunity/fields/Principle_Sum_to_be_paid_to_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Principle_Sum_to_be_paid_to_Borrower__c</fullName>
    <formula>Amount - First_Drawdown_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>