force-app/main/default/objects/Opportunity/fields/Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_of_Interest__c</fullName>
    <label>Products of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_of_Interest</valueSetName>
    </valueSet>
</CustomField>