force-app/main/default/objects/Opportunity/fields/Re_Assessed_Loan__c.field-meta.xml
<CustomField>
    <fullName>Re_Assessed_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Re-Assessed Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Re-Assessments</relationshipLabel>
    <relationshipName>Re_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>