force-app/main/default/objects/Opportunity/fields/Re_Assessed_Loan_Name__c.field-meta.xml
<CustomField>
    <fullName>Re_Assessed_Loan_Name__c</fullName>
    <formula>Re_Assessed_Loan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-Assessed Loan Name</label>
    <type>Text</type>
</CustomField>