force-app/main/default/objects/Opportunity/fields/Rebate_Period__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Period__c</fullName>
    <label>Rebate Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>