force-app/main/default/objects/Opportunity/fields/Rebate_to_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Rebate_to_Lawyer__c</fullName>
    <formula>IF( AND(Payout_Date__c &gt;=  Date_of_advance__c, Payout_Date__c &lt;=  ADDMONTHS(Date_of_advance__c, Rebate_Period__c)), 
    Payout_Balance__c - (Payout_Balance__c * (1 -  Rebate_Discount__c)),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate to Lawyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>