force-app/main/default/objects/Opportunity/fields/RecordTypeDev__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDev__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>RecordTypeDev</label>
    <type>Text</type>
</CustomField>