force-app/main/default/objects/Opportunity/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <label>Referred By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>