force-app/main/default/objects/Opportunity/fields/Referred_by_from_W2L__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_from_W2L__c</fullName>
    <label>Referred by from W2L</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>