force-app/main/default/objects/Opportunity/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>