force-app/main/default/objects/Opportunity/fields/Renewal_date_deprecated__c.field-meta.xml
<CustomField>
    <fullName>Renewal_date_deprecated__c</fullName>
    <formula>Date(YEAR(Date_Financing_Statement_Expires__c), (MONTH(Date_Financing_Statement_Expires__c) - 1), DAY(Date_Financing_Statement_Expires__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal date (deprecated)</label>
    <type>Date</type>
</CustomField>